<resources>
    <string name="app_name">Saarang ERP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ac_main">Saarang ERP</string>
    <string name="title_activity_profile_picture">ProfilePictureActivity</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="title_activity_main">Saarang ERP</string>
    <string name="title_activity_people">People</string>
       <string name="error_connection">Unable to connect to internet. Check your internet connection</string>
    <!-- Cheese-->

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="name">Shahid K Muhammed</string>
    <string name="location">Mob-Ops</string>
    <string name="postDate">Posted on: 09/08/2014</string>
    <string name="title">Coding Session</string>
    <string name="content">Frontend     Backend    MobOps   Be there for coding session,
        9am 10th Aug Sunday at CFI. Bring your laptops charged, and those who were
        late last time, bring food</string>
    <string name="acknowledge">Acknowledge</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_post_activtiy">NewPostActivtiy</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="title_activity_single_post">SinglePostActivity</string>

</resources>
