
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ffffffff"
    app:cardCornerRadius="1dp"
    app:cardElevation="2dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    >
    <LinearLayout

        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="1dp"
        >



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:paddingRight="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="#ffffffff">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:id="@+id/ivProfilePic"

                    android:src="@drawable/bg_ajmal"
                    android:background="@color/app_color"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/name"
                        android:id="@+id/tvName"
                        android:textColor="@color/indigo_color_primary_text"
                        android:layout_marginLeft="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/postDate"
                        android:id="@+id/tvPostDate"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="11dp"
                        android:textIsSelectable="false"
                        android:textColor="@color/indigo_color_disabled"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/location"
                        android:id="@+id/tvWall"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/indigo_color_secondary"
                        android:layout_marginTop="5dp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:background="#fff8f8f8"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title"
                    android:id="@+id/tvTitle"
                    android:textColor="@color/black_color_primary_text"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:textColor="@color/black_color_secondary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/content"
                    android:id="@+id/tvInfo"
                    android:layout_marginLeft="4dp"
                    android:textSize="14dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ffd1d1d1"
                android:layout_marginTop="5dp" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:weightSum="100"
                android:divider="#ff070707"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">



                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/acknowledge"
                    android:id="@+id/bAcknowledge"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/indigo_color_secondary"
                    android:layout_weight="100" />
                <!--android:textColor="#ff9e9e9e"-->

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:weightSum="100"
            android:padding="8dp">



            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etCommentNew"
                android:layout_weight="100"
                android:layout_gravity="center"
                android:paddingLeft="8dp"
                android:hint="Write a comment..."
                android:maxLines="3"/>

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_send"
                android:layout_gravity="center"
                android:id="@+id/ivSend"
                />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>


